# MPI

./: .gitignore  CMakeLists.txt  Makefile  README.md  cheat_sheet.md  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
output/: output1.txt  output10.txt  output11.txt  output12.txt  output13.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt
